--- a/RentACar.Application/RentACar.Application.csproj
+++ b/RentACar.Application/RentACar.Application.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Features\Brands\Commands\" />
+    <Folder Include="Features\Brands\Constants\" />
+    <Folder Include="Features\Brands\Rules\" />
+    <Folder Include="Features\Brands\Profiles\" />
+    <Folder Include="Features\Brands\Queries\" />
+  </ItemGroup>
+
 </Project>
