--- a/RentACar.Api/RentACar.Api.csproj
+++ b/RentACar.Api/RentACar.Api.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\RentACar.Application\RentACar.Application.csproj" />
   </ItemGroup>
 
 </Project>
