--- a/RentACar.Api/RentACar.Api.csproj
+++ b/RentACar.Api/RentACar.Api.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RentACar.Application\RentACar.Application.csproj" />
+    <ProjectReference Include="..\RentACar.Persistence\RentACar.Persistence.csproj" />
   </ItemGroup>
 
 </Project>
