--- a/RentACar.Application/RentACar.Application.csproj
+++ b/RentACar.Application/RentACar.Application.csproj
@@ -9,6 +9,24 @@
   <ItemGroup>
     <Folder Include="Features\Brands\Constants\" />
     <Folder Include="Features\Brands\Rules\" />
+    <Folder Include="Features\Fuels\Commands\" />
+    <Folder Include="Features\Fuels\Constants\" />
+    <Folder Include="Features\Fuels\Rules\" />
+    <Folder Include="Features\Fuels\Queries\" />
+    <Folder Include="Features\Fuels\Profiles\" />
+    <Folder Include="Features\Cars\Commands\" />
+    <Folder Include="Features\Cars\Constants\" />
+    <Folder Include="Features\Cars\Profiles\" />
+    <Folder Include="Features\Cars\Queries\" />
+    <Folder Include="Features\Cars\Rules\" />
+    <Folder Include="Features\Transmission\Commands\" />
+    <Folder Include="Features\Transmission\Constants\" />
+    <Folder Include="Features\Transmission\Profiles\" />
+    <Folder Include="Features\Transmission\Queries\" />
+    <Folder Include="Features\Transmission\Rules\" />
+    <Folder Include="Features\Models\Commands\" />
+    <Folder Include="Features\Models\Constants\" />
+    <Folder Include="Features\Models\Rules\" />
   </ItemGroup>
 
   <ItemGroup>
