--- a/RentACar.Api/appsettings.json
+++ b/RentACar.Api/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RentACarDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "CacheSettings": {
+    "SlidingExpiration": "2"
   }
 }
