Added redis cache

--- a/RentACar.Api/appsettings.json
+++ b/RentACar.Api/appsettings.json
@@ -10,6 +10,6 @@
     "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=RentACarDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "CacheSettings": {
-    "SlidingExpiration": "2"
+    "SlidingExpiration": 2
   }
 }
