--- a/RentACar.Api/appsettings.json
+++ b/RentACar.Api/appsettings.json
@@ -15,6 +15,11 @@
   "SeriLogConfigurations": {
     "FileLogConfiguration": {
       "FolderPath": "/logs/"
+    },
+    "MsSqlConfiguration": {
+      "AutoCreateSqlTable": true,
+      "ConnectionString": "Server=(localdb)\\mssqllocaldb;Database=RentACarDb;Trusted_Connection=True;MultipleActiveResultSets=true",
+      "TableName": "Logs"
     }
   }
 }
